// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformOas3Operation callback 1`] = `
Object {
  "callbacks": Array [
    Object {
      "callbackName": "myCallback",
      "id": "?http-operation-id?",
      "iid": "cbId",
      "method": "post",
      "path": "http://example.com?transactionId={$request.body#/id}",
      "request": Object {
        "body": Object {
          "contents": Array [],
        },
        "cookie": Array [],
        "headers": Array [],
        "path": Array [],
        "query": Array [],
      },
      "responses": Array [],
      "security": Array [],
      "servers": Array [],
      "tags": Array [],
    },
  ],
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "post",
  "path": "/subscribe",
  "request": Object {
    "body": Object {
      "contents": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "mediaType": "application/json",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-04/schema#",
            "properties": Object {
              "id": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
      ],
      "description": undefined,
      "required": undefined,
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [],
  "tags": Array [],
}
`;

exports[`transformOas3Operation given no tags should translate operation with empty tags array 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given operation servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [
    Object {
      "description": undefined,
      "id": "server-0",
      "url": "operation/server",
      "variables": undefined,
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given path servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [
    Object {
      "description": undefined,
      "id": "server-0",
      "url": "path/server",
      "variables": undefined,
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given some tags should translate operation with those tags 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [],
  "summary": "summary",
  "tags": Array [
    Object {
      "name": "tag1",
    },
  ],
}
`;

exports[`transformOas3Operation given spec servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [
    Object {
      "description": undefined,
      "id": "server-0",
      "url": "spec/server",
      "variables": undefined,
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;
